--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -199,7 +199,7 @@ footer{
   padding-top: 12px;
   padding-left: 20px;
   padding-right: 20px;
-  border: 1px solid #f2f2f2;
+  border: 0px solid #f2f2f2 !important;
   filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.16));
 
 }
